--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,8 @@
     @apply bg-linear-to-r from-[#2cfc03] via-[#03fc90] to-[#037bfc] bg-clip-text text-transparent;
 }
 
+.genre-pill {
+    @apply bg-red-800 rounded-full px-2 text-gray-300 text-sm;
+}
 
 
